# DT_IT6_SS2017

./: .cproject  .project  CMakeLists.txt  README.md
00_Build/: CMakeCache.txt  Makefile  cmake_install.cmake
01_Spezifikation/: Pi_config.pages  Tasks.numbers
02_Implementierung/: CMakeLists.txt
02_Implementierung/GPIO/: gpio.c  gpio.h
02_Implementierung/ISR/: isr.c  isr.h
02_Implementierung/MAIN/: main.c
02_Implementierung/MOTOR/: motor.c  motor.h
02_Implementierung/PID_CONTROLLER/: main.c  pid.c  pid.h
02_Implementierung/SENSING/: current_sensing.h
02_Implementierung/STEERING/: steering.c  steering.h
doc/: 21_03_2017_Besprechung_Ideen_Material.txt  Aufgabenliste_Terminplan.xlsx  Meilenstein.xlsx  Projektbeschreibung.docx  Zeituebersicht.xlsx
include/: CStack.h  Car.h  CarCommandInterface.h  CarCommandTestInterface.h  CarState.h  CarSystem.h  Command.h  DeviceConfiguration.h  DriveCalculation.h  Element.h  ErrorCodes.h  ErrorHandling.h  LaserSensor.h  LocDet.h  Map.h  MapConfiguration.h  Node.h  Route.h  (+8 more)
src/: CMakeLists.txt  CStack.cpp  Car.cpp  CarCommandInterface.cpp  CarCommandTestInterface.cpp  CarSystem.cpp  Command.cpp  DriveCalculation.cpp  Element.cpp  LaserSensor.cpp  LocDet.cpp  Map.cpp  Map.h  MapPoint.h  MapRouting.h  MapVector.h  Node.cpp  PriorityQueue.cpp  PythonExecuter.cpp  ReadDataFromSerial.cpp  ReadDataFromSerial.h  Route.cpp  RouteCalculation.cpp  RouteDriver.cpp  Stack.cpp  Vector.cpp  datacollector.cpp  library.h  main.cpp  pyfkt.py
src/Routing/Routing.xcodeproj/: project.pbxproj
src/Routing/Routing.xcodeproj/project.xcworkspace/xcuserdata/andreas.xcuserdatad/: UserInterfaceState.xcuserstate
src/Routing/Routing.xcodeproj/xcuserdata/andreas.xcuserdatad/xcschemes/: xcschememanagement.plist
src/Routing/routing/: Point.c  Point.h  Vector.c  Vector.h  main.c
src/libmdrv/: CMakeLists.txt
src/libmdrv/GPIO/: gpio.h
src/libmdrv/MAIN/: main.c  main.cpp
src/libmdrv/MOTOR/: motor.c  motor.h
src/libmdrv/PROJECT_ADAPTER/: project_adapter.h
src/libmdrv/SENSING/: current_sensing.h
src/libmdrv/STEERING/: steering.c
src/libvis/: csvReader.py  excelReader.py  map.csv  map.xls
src/routing/: CMakeLists.txt  Element.cpp  Element.h  Map.cpp  Map.h  Node.cpp  Node.h  PriorityQueue.cpp  PriorityQueue.h  Route.cpp  Route.h  RouteCalculation.cpp  RouteCalculation.h  main.cpp
(+3 files in other folders)
